syntax="proto3";
package analytics;

service analytics{
    rpc SaveRegInfo(SaveRegRequest) returns (SaveRegResponse);
    // rpc SaveOrderInfo(SaveOrderRequest) returns (SaveOrderResponse);
}

message SaveRegRequest {
    string uuid = 1;
    string role = 2;
    string created_at = 3;
}

message SaveRegResponse {
    bool record_created = 1;
}

message SaveOrderRequest {
    string order_uuid = 1;
    string finished_at = 2;
    repeated OrderItems order_items = 3;
}

message OrderItems {
    string product_uuid = 1;
    int32 amount = 2; 
}

message SaveOrderResponse {
    bool record_created = 1;
}


